--- a/src/app/shared/card-homepage/card-homepage.component.css
+++ b/src/app/shared/card-homepage/card-homepage.component.css
@@ -4,14 +4,15 @@
     box-sizing: border-box;
 }
 
-.container_card_homepage{
-    width: fit-content;
+.container_card_homepage {
+    max-width: 225px;
     height: 100%;
     overflow: inherit;
     background: rgb(245, 245, 240);
     border-radius: 24px;
     padding:20px;
     box-shadow: 0px 0px 15px rgba(41, 39, 39, 0.3), 0px 0px 15px rgba(35, 17, 43, 0.5);  
+    margin-bottom: 2rem;
 }
 
 
@@ -35,4 +36,34 @@
 .footer {
     color: rgb(122, 110, 170);
 }
+
+
+
+/* Card dark mode */
+
+
+.darkmode-container {
+    max-width: 225px;
+    height: 100%;
+    overflow: inherit;
+    background: rgb(39, 38, 44);
+    border-radius: 24px;
+    padding:20px;
+    box-shadow: 0px 0px 15px rgba(139, 14, 133, 0.3), 0px 0px 15px rgba(90, 4, 128, 0.6);
+    color: rgb(244, 238, 255); 
+    
+}
+
+.darkmode-header svg {
+    fill: rgb(154, 106, 255);
+}
+
+.darkmode-h2-colored {
+   color: rgb(154, 106, 255);
+}
+
+.darkmode-footer {
+    color: rgb(184, 173, 210);
+}
+
 
