--- a/src/app/shared/select-bar/select-bar.component.html
+++ b/src/app/shared/select-bar/select-bar.component.html
@@ -1,1 +1,39 @@
-<p>select-bar works!</p>
+<div class="select_bar_pancake darkmode" (click)="showDropdownList()" [ngStyle]="{'border-radius': show? '16px 16px 0px 0px' : '16px'}">
+    <div class="container_pancake_arrow">
+        <svg viewBox="0 0 24 24" color="text" width="20px" 
+        xmlns="http://www.w3.org/2000/svg" 
+        class="sc-5a69fd5e-0 fIBjTm"><path d="M8.71005 11.71L11.3001 14.3C11.6901 
+        14.69 12.3201 14.69 12.7101 14.3L15.3001 11.71C15.9301
+        11.08 15.4801 10 14.5901 10H9.41005C8.52005 10 8.08005
+        11.08 8.71005 11.71Z"></path></svg>
+        </div>
+        <div class="text_option_selected">
+            <span class="op_select">{{listaItem}}</span>
+        </div>
+    <div class="container_list_text" [ngStyle]="{'display': show? 'block' : 'none'}">
+        <ul class="lista_item" >
+            <li class="lista" *ngFor="let i of option" (click)="functionName($event)" >{{i}}</li>
+        </ul>
+    </div>
+</div>
+
+
+
+
+
+<!-- <li (click)="functionName($event)">PROVA</li>
+[(ngModel)]="listaItem"
+<h1 [ngModel]="listaItem">{{listaItem}}</h1> -->
+
+
+<!-- <div>
+    <li *ngFor="let i of elementi">{{i}}</li>
+</div>
+
+<button (click)="function()">inserisci</button> -->
+
+
+
+
+
+
