upadate homepage-compnent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<cake-card-homepage></cake-card-homepage>
+<cake-homepage></cake-homepage>
 
-<cake-select-bar></cake-select-bar>
+<cake-section-cake-makes></cake-section-cake-makes>
+
+
+<!-- <cake-select-bar></cake-select-bar> -->
