--- a/src/app/Project/homepage/homepage.component.html
+++ b/src/app/Project/homepage/homepage.component.html
@@ -1,1 +1,26 @@
-<p>homepage works!</p>
+
+<div class="container-section-card-homepage">
+
+    <div class="container-text-card">
+
+        <div class="container-pancake-face-img">
+            <img src="../../../assets/pancake-face.svg" alt="pancakeFace">
+        </div>
+        <div class="container-title">
+            <h2 class="title-pancake-face-homepage">
+                Used by milions.  
+            </h2>
+            <h2 class="title2">Trusted with bilions.</h2>
+        </div>
+            <div class="container-paragraph">
+                <p class="paragraph-pancake-face-homepage">PancakeSwap has the most users of any decentralized platform, ever.</p>
+                <p class="paragraph2"> And those users are now entrusting the platform with over $6.2 billion in funds.</p>
+                <p class="paragraph3">Will you join them?</p>
+            </div>
+    </div>
+
+    <div class="container-cards">
+        <cake-card-homepage></cake-card-homepage>
+    </div>
+
+</div>
