--- a/src/app/shared/select-bar/select-bar.component.html
+++ b/src/app/shared/select-bar/select-bar.component.html
@@ -21,16 +21,16 @@
 
 
 
-<!-- <li (click)="functionName($event)">PROVA</li>
-[(ngModel)]="listaItem"
-<h1 [ngModel]="listaItem">{{listaItem}}</h1> -->
+<li (click)="functionName($event)">PROVA</li>
+
+<h1 >{{listaItem}}</h1>
 
 
-<!-- <div>
+<div>
     <li *ngFor="let i of elementi">{{i}}</li>
 </div>
 
-<button (click)="function()">inserisci</button> -->
+<button (click)="function()">inserisci</button>
 
 
 
