--- a/src/app/views/farms/farms.component.html
+++ b/src/app/views/farms/farms.component.html
@@ -1,1 +1,44 @@
-<p>farms works!</p>
+<!-- ToolBar Starts -->
+<div class="container-toolbar-farms-pools d-flex center vert-center ">
+    <div class="farms-container d-flex  column">
+        <a class="link-farms">Farms</a>
+        <span class="test"></span>
+    </div>
+    <div class="pools-container d-flex column">
+        <a class="link-pools">Pools</a>
+        <span></span>
+    </div>
+</div>
+<!-- Toolbar Ends -->
+
+<!-- FARMS STart -->
+<div class="farms-title-container">
+    <div class="container-title-sub-link">
+        <h1 class="title">Farms</h1>
+        <h2 class="sub-title">Stake Lp tokens to earn</h2>
+        <a class="link-comunity-actions d-flex ">
+            <p>Community Auctions</p>
+            <img class="svg-forms-link" src="../../../assets/farms/arrow-farms-title.svg" alt="arrow" fill="currentColor">
+        </a>
+    </div>
+</div>    
+<!-- FARMS ENd -->
+
+<div class="table-container">
+    <div class="table-filter-container d-flex space-between">
+        <div class="filter-left">
+            <div class="item-left d-flex center vert-center">
+                <img src="../../../assets/farms/filter-farms/card-filter.svg" alt="">
+                <img src="../../../assets/farms/filter-farms/list-filter.svg" alt="">
+                <label class="switch">
+                    <input type="checkbox" />
+                    <span class="slider round"></span>
+                   
+                </label>
+                <p>Staked only</p>
+            </div>
+        </div>
+        <div class="filter-right">World</div>
+
+    </div>
+</div>
