--- a/src/app/views/farms/farms.component.css
+++ b/src/app/views/farms/farms.component.css
@@ -2,6 +2,9 @@
     display: flex;
 }
 
+.wrap{
+    flex-wrap: wrap;
+}
 .column{
     flex-direction: column;
 }
@@ -131,69 +134,187 @@ button{
 .table-container{
     padding: 2rem 1.5rem 2rem 1.5rem;
     background-color: #FAF9FA;
+    
 }
 
+.table-filter-container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 /* TABLE ENDS */
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+.card-filter-svg, .list-filter-svg{
+    filter: invert(96%) sepia(0%) saturate(5894%) hue-rotate(257deg) brightness(84%) contrast(86%);
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+/* SWITCH  small toogle STart */
+
+.container-staked-farms-toggle{
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: rgb(238, 234, 244);
+    border-radius: 24px;
+    box-shadow: rgb(74 74 104 / 10%) 0px 2px 2px -1px inset;
+    cursor: pointer;
+    display: inline-flex;
+    height: 20px;
+    position: relative;
+    transition: background-color 200ms ease 0s;
+    width: 36px;
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+.toggle-staked-farms{
+    cursor: pointer;
+    opacity: 0;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: 3;
+   
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+.slider-toggle{
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    cursor: pointer;
+    height: 16px;
+    left: 2px;
+    position: absolute;
+    top: 2px;
+    transition: left 200ms ease-in 0s;
+    width: 16px;
+    z-index: 1;
+    
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.toggle-staked-farms:hover + .slider-toggle{
+    box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4px;
+    
 }
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+.toggle-staked-farms:checked + .slider-toggle{
+    left: calc(100% - 18px)!important;
+    
 }
 
 
+
+.newColorChecked{
+    background-color: rgb(49, 208, 170);
+}
+
+.container-toggle-text-staked > p{
+    color: rgb(40, 13, 95);
+    font-weight: 400;
+    line-height: 1.5;
+    font-size: 16px;
+    margin-left: 8px;
+    font-weight: 400;
+}
+
+/* Swith toogle small ends */
+
+/* Switch toggle big start */
+.container-live-finished-toggle{
+    margin-left: 16px;
+    background-color: rgb(238, 234, 244);
+    border-radius: 16px;
+    display: inline-flex;
+    align-items: center;
+    border: 1px solid rgb(215, 202, 236);
+    width: auto;
+    cursor: pointer;
+}
+
+.container-live-finished-toggle a{
+    padding-left: 12px;
+    padding-right: 12px;
+    font-weight: 600;
+    color: rgb(122, 110, 170);
+}
+
+
+.farms-link-live{
+    position: relative;
+    -webkit-box-align: center;
+    align-items: center;
+    border: 0px;
+    border-radius: 16px;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: inherit;
+    -webkit-box-pack: center;
+    letter-spacing: 0.03em;
+    line-height: 1;
+    opacity: 1;
+    outline: 0px;
+    transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+    height: 32px;
+    padding: 0px 16px;
+     background-color: rgb(122, 110, 170);
+    color: rgb(255, 255, 255)!important;
+    
+}
+
+/* Switch toggle big ends */
+
+/* Sorte LIST starts */
+
+.container-search{
+    margin-left: 16px;
+}
+.container-list-item{
+    width: 100%;
+    min-width: 168px;
+    height: 40px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    padding: 0px 16px;
+    box-shadow: rgb(74 74 104 / 10%) 0px 2px 2px -1px inset;
+    border: 1px solid rgb(215, 202, 236);
+    border-radius: 16px;
+    background: rgb(238, 234, 244);
+    transition: border-radius 0.15s ease 0s;
+    position: relative;
+}
+
+.search-bar{
+     width: 100%;
+    max-width: 245px;
+    height: 40px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    padding: 0px 16px;
+    box-shadow: rgb(74 74 104 / 10%) 0px 2px 2px -1px inset;
+    border: 1px solid rgb(215, 202, 236);
+    border-radius: 16px;
+    background: rgb(238, 234, 244);
+    transition: border-radius 0.15s ease 0s;
+    position: relative;
+}
+
+.search-bar:focus{
+outline:1px solid rgb(118 69 217); 
+box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4px;
+}
+
+.search-bar[type="text"]{
+    font-size: 16px;
+    font-weight:500;
+    color:rgb(40, 13, 95);
+
+}
+/* Sorte LIST ends */
+
+@media only screen and (max-width: 572px) {
+    .filter-left{
+        width: 100%;
+    }
+    .item-left{
+        justify-content: space-between;
+    }
+}
 
 
 @media only screen and (max-width: 370px) {
