--- a/src/app/views/farms/farms.component.css
+++ b/src/app/views/farms/farms.component.css
@@ -14,6 +14,9 @@
 .space-between{
     justify-content: space-between;
 }
+.space-around{
+    justify-content: space-around;
+}
 .star{
     justify-content: start;
 }
@@ -210,7 +213,6 @@ button{
     margin-left: 8px;
     font-weight: 400;
 }
-
 /* Swith toogle small ends */
 
 /* Switch toggle big start */
@@ -276,6 +278,7 @@ button{
     background: rgb(238, 234, 244);
     transition: border-radius 0.15s ease 0s;
     position: relative;
+    cursor: pointer;
 }
 
 .search-bar{
@@ -307,6 +310,150 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
 }
 /* Sorte LIST ends */
 
+
+
+/* Table data  rows START */
+
+.table-container-data-rows{
+    margin-top: 16px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(231, 227, 235);
+    max-width: 1300px;
+    margin: 0 auto;
+    margin-top: 26px;
+    border-radius: 16px;
+    cursor: pointer;
+  
+
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: 28% 9% 9% 16% 18% 12% 8%;
+    border-bottom: 2px solid rgb(233, 234, 235);
+}
+
+.grid-item{
+    padding: 1.5rem 2rem 1.5rem 0 ;
+    font-size: 12px;
+    line-height:12px;
+    color:#7a6eaa;
+    font-weight: 400;
+
+}
+
+.title-token{
+    font-size: 16px;
+    font-weight: 600;
+    color: #280d5f;
+}
+.earned-total{
+    font-size: 16px;
+    color:#bdc2c4;
+    display: inline-block;
+    margin-top: 6px;
+    
+}
+
+.apr-percent{
+    color:#280d5f;
+    font-size: 16px;
+    font-weight: 400px;
+  
+}
+
+.container-percent-calculator img{
+    filter: invert(46%) sepia(32%) saturate(594%) hue-rotate(211deg) brightness(92%) contrast(84%);
+    margin-left: 4px;
+}
+
+.svg-question{
+    filter: invert(46%) sepia(32%) saturate(594%) hue-rotate(211deg) brightness(92%) contrast(84%);
+}
+
+.total-liquidy{
+    font-weight: 400;
+    font-size: 16px;
+     color:#280d5f;
+
+}
+
+.multiply{
+    font-weight: 400;
+    font-size: 16px;
+     color:#280d5f;
+}
+
+
+.container-core-checked{
+    max-width: fit-content;
+    font-size: 12px;
+    color: rgb(118, 69, 217);
+    border-radius: 16px;
+    padding: 0px 4px;
+    white-space: nowrap;
+    height: 24px;
+    background: rgb(250, 249, 250);
+    border: 2px solid rgb(118, 69, 217);
+    font-weight: 400;
+   
+}
+
+.container-core-checked  img{
+    filter: invert(29%) sepia(30%) saturate(4065%) hue-rotate(242deg) brightness(98%) contrast(91%);
+    padding-top: 3px;
+}
+
+.svg-arrow-details{
+     filter: brightness(0) saturate(100%) invert(83%) sepia(16%) saturate(3878%) hue-rotate(139deg) brightness(86%) contrast(91%);
+     
+}
+
+.svg-question-container{
+    margin-left: 10px;
+}
+
+.container-to-top{
+    cursor: auto;
+}
+
+.item-to-top{
+    height: 58px;
+}
+
+.btn-to-top{
+    font-size: 16px;
+    color: #1fc7d4;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.container-to-top-svg img{
+      filter: brightness(0) saturate(100%) invert(83%) sepia(16%) saturate(3878%) hue-rotate(139deg) brightness(86%) contrast(91%);
+      
+}
+
+.text-details{
+    color: #1fc7d4;
+    font-size: 16px;
+    font-weight: 600;
+    display: none;
+}
+
+/* Table data  rows END */
+
+
+@media only screen and (max-width: 968px){
+    .core-container, .liquidy-container, .container-multiple{
+        display: none;
+    }
+    .text-details{
+        display: block;
+    }
+    .grid-container{
+        grid-template-columns: 45% 15% 20% 20%;
+    }
+}
+
 @media only screen and (max-width: 572px) {
     .filter-left{
         width: 100%;
@@ -314,6 +461,21 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
     .item-left{
         justify-content: space-between;
     }
+
+    .grid-container{
+        grid-template-columns: 50% 50%;
+       
+
+    }
+    .core-container{
+    display: block;
+    
+        
+    }
+
+
+
+    
 }
 
 
@@ -325,4 +487,11 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
         margin-top: 0;
        
     }
+}
+
+
+.t{
+    height: 200px;
+    
+    background-color: #F6F6F6;
 }
