earn-section-home v0.2

--- a/src/app/Project/earn-section/earn-section/earn-section.component.html
+++ b/src/app/Project/earn-section/earn-section/earn-section.component.html
@@ -1,13 +1,15 @@
 
 <section class="earn-section">
-                <div class="container-earnPassive-images">
-                    <div class="flex-container-images">
-                        <div class="flex-item-box-images">
-                            <div id="pie" class="container-image">
-                                <img src="../../../../assets/home-earn-section/pie.png" alt="ear-sections-flating-images">
-                            </div>
-                            <div id="stonks" class="container-image">
-                                <img src="../../../../assets/home-earn-section/stonks.png" alt="ear-sections-flating-images">
+    <div class="wrapper">
+        
+        <div class="container-earnPassive-images">
+            <div class="flex-container-images">
+                <div class="flex-item-box-images">
+                    <div id="pie" class="container-image">
+                        <img src="../../../../assets/home-earn-section/pie.png" alt="ear-sections-flating-images">
+                    </div>
+                    <div id="stonks" class="container-image">
+                        <img src="../../../../assets/home-earn-section/stonks.png" alt="ear-sections-flating-images">
                             </div>
                             <div id="folder" class="container-image">
                                 <img src="../../../../assets/home-earn-section/folder.png" alt="ear-sections-flating-images">
@@ -15,13 +17,13 @@
                         </div>
                     </div>
 
-                    <div class="d-flex align-items flex-item-earn-passive-container">
-                        <div class="flex-item-earn-passive s">
-                            <h2><span>Earn </span>passive income with crypto</h2>
+                    <div class=" flex-item-earn-passive-container d-flex align-items">
+                        <div class="flex-item-earn-passive ">
+                            <h2><span class="title-earn">Earn </span>passive income with crypto.</h2>
                             <p>PancakeSwap makes it easy to make your crypto work for you</p>
-                            <div class="d-flex">
-                                <button><a href="#">Explore</a></button>
-                                <a href="#">Learn</a>
+                            <div class="d-flex align-items">
+                                <button class="btn-explore"><a>Explore</a></button>
+                                <a class="link-learn">Learn</a>
                             </div>
                         </div>
                     </div>
@@ -40,9 +42,9 @@
                         <div class="top-item-data-trade-container" [class.animationTopTrade]="index">
                             <div class="d-flex space-between items-top-trade">
                                 <div *ngFor="let trade of trades[0].syrupPools; let i = index">
-                                     <p>{{trade.token | titlecase}}</p>
-                                     <p>{{trade.percentage}}%</p>
-                                     <p>{{trade.rate | uppercase}}</p>
+                                    <p>{{trade.token | titlecase}}</p>
+                                    <p>{{trade.percentage}}%</p>
+                                    <p>{{trade.rate | uppercase}}</p>
                                 </div>
                             </div>
                         </div>
@@ -59,5 +61,7 @@
                         </div> 
                     </div>
                 </div>
-        </section>
-
+    </div>
+</section>
+            
+            
