--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <cake-section-cake-makes></cake-section-cake-makes>
 
-
+<cake-patata-in-seconds></cake-patata-in-seconds>
 <!-- <cake-select-bar></cake-select-bar> -->
