--- a/src/app/shared/button-connect/button-connect.component.html
+++ b/src/app/shared/button-connect/button-connect.component.html
@@ -1,1 +1,2 @@
-<p>button-connect works!</p>
+<div class="buttonFooter"><button class="sc-a8cf5f33-0 gHVxOO" width="100%" scale="md">Connect
+                Wallet</button></div>
