--- a/src/app/shared/card-collection/card-collection.component.html
+++ b/src/app/shared/card-collection/card-collection.component.html
@@ -1,1 +1,42 @@
-<p>card-collection works!</p>
+<div class="cont-tot">
+    <div class="container-card">
+
+        <!-- immagine grande -->
+        <div class="container-img">
+            <img class="avatar-1" src="../../../assets/banner-sm.png" alt="banner" width="355.33px" height="118.44px">
+        </div>
+        <!-- immagine grande -->
+
+
+        <div class="cont">
+            <!-- avatar -->
+            <div class="container-avatar">
+                <img src="../../../assets/avatar.png" alt="avatar" width="88px" height="88px">
+            </div>
+            <!-- avatar -->
+
+            <div class="contenitore-testo">
+                <div class="contenitore-titolo">
+                    <h2 class="degen">Degen Ape Club</h2>
+                </div>
+
+                <div class="contenitore-volume">
+                    <span class="volume">Volume</span>
+                    <span class="icona">
+                        <svg viewBox="0 0 96 96" width="16px" color="text" xmlns="http://www.w3.org/2000/svg"
+                            class="sc-5a69fd5e-0 eaYmHW">
+                            <circle cx="48" cy="48" r="48" fill="#F0B90B"></circle>
+                            <path
+                                d="M30.9008 25.9057L47.8088 16.0637L64.7169 25.9057L58.5007 29.5416L47.8088 23.3355L37.117 29.5416L30.9008 25.9057ZM64.7169 38.3179L58.5007 34.682L47.8088 40.8881L37.117 34.682L30.9008 38.3179V45.5897L41.5926 51.7958V64.2079L47.8088 67.8438L54.0251 64.2079V51.7958L64.7169 45.5897V38.3179ZM64.7169 58.0018V50.7301L58.5007 54.366V61.6377L64.7169 58.0018ZM69.1305 60.572L58.4386 66.7781V74.0499L75.3467 64.2079V44.524L69.1305 48.1599V60.572ZM62.9143 32.1118L69.1305 35.7477V43.0195L75.3467 39.3836V32.1118L69.1305 28.4759L62.9143 32.1118ZM41.5926 69.411V76.6828L47.8088 80.3187L54.0251 76.6828V69.411L47.8088 73.0469L41.5926 69.411ZM30.9008 58.0018L37.117 61.6377V54.366L30.9008 50.7301V58.0018ZM41.5926 32.1118L47.8088 35.7477L54.0251 32.1118L47.8088 28.4759L41.5926 32.1118ZM26.4872 35.7477L32.7034 32.1118L26.4872 28.4759L20.271 32.1118V39.3836L26.4872 43.0195V35.7477ZM26.4872 48.1599L20.271 44.524V64.2079L37.1791 74.0499V66.7781L26.4872 60.572V48.1599Z"
+                                fill="white"></path>
+                        </svg>
+                    </span>
+                    <span class="value">2.431,618</span>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+</div>
