--- a/src/app/shared/card-homepage/card-homepage.component.css
+++ b/src/app/shared/card-homepage/card-homepage.component.css
@@ -56,7 +56,7 @@
 /* Card dark mode */
 
 
-.darkmode-container {
+/* .darkmode-container {
     max-width: 245px;
     height: 100%;
     overflow: inherit;
@@ -80,6 +80,6 @@
 
 .darkmode-footer {
     color: rgb(184, 173, 210);
-}
+} */
 
 
