--- a/src/app/Project/section-pancake-makes/section-pancake-makes.component.css
+++ b/src/app/Project/section-pancake-makes/section-pancake-makes.component.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    background: linear-gradient(rgb(9, 7, 12) 22%, rgb(32, 19, 53) 100%);
+    background: linear-gradient(rgb(249, 250, 255)22%,rgb(215, 202, 236)100%) repeat scroll 0% 0%;
     padding: 48px 0px;
-    color: white;
+    color: black;
 }
 
 .container-pancake-face-img {
