--- a/src/app/Project/homepage/homepage.component.html
+++ b/src/app/Project/homepage/homepage.component.html
@@ -1,8 +1,9 @@
-<<<<<<< HEAD
-<cake-popup-nav-bar *ngIf="showBanner === 'true'"></cake-popup-nav-bar>
+
+
 <cake-moon></cake-moon>
 <cake-win></cake-win>
-=======
+<cake-earn-section></cake-earn-section>
+
 
 <div class="container-section-card-homepage">
 
@@ -13,7 +14,7 @@
         </div>
         <div class="container-title">
             <h2 class="title-pancake-face-homepage">
-                Used by milions.  
+                Used by milions.
             </h2>
             <h2 class="title2">Trusted with bilions.</h2>
         </div>
@@ -29,4 +30,5 @@
     </div>
 
 </div>
->>>>>>> b44786440ccb6fd99612e647aed47fefb63bb8da
+
+
