--- a/src/app/views/lottery/lottery.component.html
+++ b/src/app/views/lottery/lottery.component.html
@@ -3,4 +3,6 @@
 
 
 
-
+<cake-first-section></cake-first-section>
+<cake-second-section></cake-second-section>
+<cake-third-section></cake-third-section>
