--- a/src/app/views/swap/trading-competition/finished/content-text/content-text.component.html
+++ b/src/app/views/swap/trading-competition/finished/content-text/content-text.component.html
@@ -5,9 +5,6 @@
 
 
 
-<div class="container">
-
-
 
 <div class="cont">
   <div class="date">May 17-24-2022</div>
@@ -48,11 +45,11 @@
     Compete with other teams for the highest trading volume!
   </h2>
 
-  <!-- <div class="first-coin">
+ <div class="first-coin">
     <img
       src="https://pancakeswap.finance/_next/image?url=%2F_next%2Fstatic%2Fmedia%2FMoD-banner-dar.1582f3fa.png&w=640&q=75"
       alt="">
-  </div> -->
+  </div>
 
   <!-- <div class="third-coin">
     <img
@@ -62,26 +59,17 @@
 
 
 
-<!-- <div class="second-coin">
+<div class="second-coin">
   <img src="https://pancakeswap.finance/_next/image?url=%2F_next%2Fstatic%2Fmedia%2FMoD-banner-dar2.a7704a87.png&w=384&q=75" alt="">
+</div>
+
 </div> -->
 
-</div>
-
-<!-- <div class="ww"></div> -->
-
-
-
-
-
-
-
-
-<!-- <cake-clock></cake-clock>
-<div class="wave"></div> -->
+<div class="wave">
 
 </div>
 
+<div>
 
 
 
