--- a/src/app/views/swap/trading-competition/finished/finished.component.html
+++ b/src/app/views/swap/trading-competition/finished/finished.component.html
@@ -1,4 +1,9 @@
 
+<cake-section-one></cake-section-one>
+<cake-rank></cake-rank>
+<cake-top-traders></cake-top-traders>
+<cake-prizes></cake-prizes>
+<cake-last-section></cake-last-section>
 
 
 
