--- a/src/app/views/swap/trading-competition/finished/top-traders/top-traders.component.html
+++ b/src/app/views/swap/trading-competition/finished/top-traders/top-traders.component.html
@@ -1,5 +1,4 @@
-
-<!-- <div class="concav-cont">
+ <div class="concav-cont">
   <div class="score">
     <cake-com></cake-com>
   </div>
@@ -14,7 +13,7 @@
   </defs>
 </svg>
   </div>
-</div> -->
+</div>
 
 
 
@@ -289,8 +288,7 @@
 
 
 
-<cake-top-traders-table></cake-top-traders-table> -->
-
+<cake-top-traders-table></cake-top-traders-table> 
 
 </div>
 </div>
