--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,10 @@
+<!-- <cake-popup-nav-bar></cake-popup-nav-bar>
+<cake-nav-bar></cake-nav-bar> -->
+
+<!-- <cake-lottery></cake-lottery> -->
+<!-- <cake-swap></cake-swap> -->
+<!-- <cake-homepage></cake-homepage> -->
+<!-- <cake-footer></cake-footer> -->
 
 
-<div class="nav" style="position: relative; z-index: 999; width: 100%;">
-<cake-nav-bar></cake-nav-bar>
-</div>
-
-
-<div class="cont" style="position: relative; z-index: -2;">
- <cake-top-traders></cake-top-traders>
-<cake-prizes></cake-prizes>
-<cake-rules></cake-rules>
-<cake-last-section></cake-last-section>
-
-<cake-first-section></cake-first-section>
-<cake-second-section></cake-second-section>
-
-<cake-third-section></cake-third-section>
-
-<cake-connect-popup></cake-connect-popup>
-
-
-
-</div>
-
-<cake-earn-section></cake-earn-section>
-<cake-patata-in-seconds></cake-patata-in-seconds>
-<cake-select-bar></cake-select-bar>
+<cake-farms></cake-farms>
