--- a/src/app/views/farms/farms.component.html
+++ b/src/app/views/farms/farms.component.html
@@ -14,7 +14,7 @@
 <!-- FARMS STart -->
 <div class="farms-title-container">
     <div class="container-title-sub-link">
-        <h1 class="title">Farms</h1>
+        <h1 class="title" >Farms</h1>
         <h2 class="sub-title">Stake Lp tokens to earn</h2>
         <a class="link-comunity-actions d-flex ">
             <p>Community Auctions</p>
@@ -26,12 +26,12 @@
 
 <!-- FILTTER STARTS -->
 <div class="table-container">
-    <cake-filters-bar></cake-filters-bar>
+    <cake-filters-bar (optionEmitted)="filter($event)"></cake-filters-bar>
 <!-- FILTTER ENDS -->
 
 <!-- TABLE DATA  ROWS START -->
     <div class="table-container-data-rows">
-        <ng-container *ngFor="let data of farmsData; let i = index">
+        <ng-container *ngFor="let data of farmsData | searchFilter: searchKey: 'nameToken'; let i = index">
             <div class="grid-container" (click)="rotate(i)">
                         <div class="grid-item token-title-container d-flex vert-center" style="padding-left: 2rem">
                             <div>
@@ -52,27 +52,27 @@
                             <span class="earned-total">{{data.earned}}</span>
                         </div>
                         <div class="grid-item apr-container">
-                            <p>{{data.rate}}</p>
+                            <p>APR</p>
                             <div class="container-percent-calculator d-flex vert-center">
-                                <span class="apr-percent">{{data.percentage}}%</span>
+                                <span class="apr-percent">{{data.multiplier}}%</span>
                                 <div>
                                     <img src="../../../assets/farms/table-farms/calculator.svg" alt="Calculator">
                                 </div>
                             </div>
                         </div>
                         <div  class="grid-item liquidy-container">
-                            <p>{{data.crowdSourced}}</p>
+                            <p>Liquidity</p>
                             <div class="container-total-liquidy d-flex vert-center">
-                                <span class="total-liquidy">{{data.total | currency}}</span>
+                                <span class="total-liquidy">{{data.liquidity | currency : 'USD' : 'symbol' : '1.0-0' }}</span>
                                 <div class="svg-question-container">
                                     <img class="svg-question" src="../../../assets/farms/table-farms/question.svg" alt="question mark">
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item container-multiple">
-                            <p>{{data.multiplier}}</p>
+                            <p>Multiplier</p>
                             <div class="d-flex vert-center">
-                                <span class="multiply">{{data.cakeReward}}x</span>
+                                <span class="multiply">{{data.multiplier}}x</span>
                                 <div class="svg-question-container">
                                     <img class="svg-question" src="../../../assets/farms/table-farms/question.svg" alt="question mark">
                                 </div>
@@ -105,6 +105,9 @@
        
     </div>
 <!-- TABLE DATA  ROWS END -->
+    <div class="container-image-farm-bottom d-flex center">
+        <img src="https://pancakeswap.finance/images/decorations/3dpan.png" alt="" style="margin-top: 58px">
+    </div>
 
 </div>
 
