--- a/src/app/views/farms/filters-bar/filters-bar.component.css
+++ b/src/app/views/farms/filters-bar/filters-bar.component.css
@@ -315,6 +315,49 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
 
 
 
+/*SORT BY OPTION*/
+.sub-options-sort-by{
+    height: 189px;
+    width: 100%;
+    z-index: 10;
+    background: rgb(238, 234, 244);
+    position: absolute;
+    top: 39px;
+    left: 0;
+    border: 1px solid rgb(215, 202, 236);
+    border-radius: 0  0px 16px 16px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 0px 2px, rgb(14 14 44 / 10%) 0px 4px 12px -8px;
+    -webkit-box-pack: justify;
+    cursor: pointer;
+    justify-content: start;
+    display: none;
+   
+    border-width: 0px 1px 1px;
+    border-style: solid;
+    border-color: rgb(215, 202, 236);
+    border-image: initial;
+    overflow: hidden;
+}
+.sub-options-sort-by li{
+    padding: .6rem 1.1rem .6rem 1.1rem;
+    list-style: none;
+    color:#280d5f;
+    font-weight: 400px;
+}
+
+.sub-options-sort-by li:hover{
+    background-color: #d7caec
+}
+
+
+.bottom-border-radius{
+    border-radius: 16px 16px 0 0;
+}
+
+.show-options-sort{
+    display: block;
+}
+
 
 
 @media only screen and (max-width: 572px) {
