--- a/src/app/shared/section-cake-makes/section-cake-makes.component.html
+++ b/src/app/shared/section-cake-makes/section-cake-makes.component.html
@@ -36,19 +36,27 @@
         </div>
     
 
-    <div class="container-footer-cake-makes">
-        <p class="title">Total supply</p>
+    <div #scrollEventTest class="container-footer-cake-makes">
+        <div class="total-supply">
+        <p>Total Supply</p>
         <h2 class="number">{{number}}</h2>
+        </div>
 
-        <p class="title2">Burned to date</p>
-        <h2 class="number2"></h2>
-
-        <p class="title3">Market cap</p>
-        <h2 class="number3"></h2>
-
-        <p class="title4">Current emissions</p>
-        <h2 class="number4">{{prova}}</h2>
+        <div class="burned-to-date">
+            <p>Burned to date</p>
+            <h2 class="number2">1234567</h2>
+        </div>
+        <div class="market-cap">
+            <p class="title2">Market cap</p>
+            <h2 class="number2"></h2>
+        </div>
+        <div class="current-emissions">
+            <p class="title4">Current emissions</p>
+            <h2 class="number4">{{prova}}</h2>
+        </div>
+        
     </div>
+
 
     
 </div>
