--- a/src/app/shared/section-cake-makes/section-cake-makes.component.css
+++ b/src/app/shared/section-cake-makes/section-cake-makes.component.css
@@ -1,22 +1,20 @@
 .container-cake-makes{
-position: relative;
-flex-direction: column;
--webkit-box-align: center;
-align-items: center;
-background: rgb(8, 6, 11);
-padding: 48px 0px;
-color: white;
-width: 100%;
-height: 100%;
+  width:100%;
+  max-width:968px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 48px 24px 98px;
+
 }
 
 .container-header-cake-makes {
   display: flex;
-  flex-flow: row;
-  align-items: flex-start;
+  width: max-content;
   max-width: 420px;
-  height: max-content;
+  flex-flow: row;
   margin: 2rem;
+  
 }
 
 .container-head {
@@ -150,9 +148,13 @@ height: 100%;
 
 
 .container-footer-cake-makes {
+    width: 968px;
+    padding-top: 48px;
     display: flex;
-    flex-flow: row;
+    flex-flow: wrap row;
     justify-content: space-around;
+    align-content:center;
     margin-top: 4rem;
-    height: 200px;
+    
 }
+
